# learningc

./: .gitignore  README.md  creating and maintaining a static library.md  gcc attribute.md
advanced_c/alignment/: main.c
advanced_c/binarytree/: fruits.h  main2.c
advanced_c/bitfields/: main.c
advanced_c/bitflags/: main.c
advanced_c/constexpr/: main.c
advanced_c/error_handling/: main.c
advanced_c/function_pointer/: main.c
advanced_c/generic/: main.c
advanced_c/hashtable/: main.c
advanced_c/long_number/: Makefile  main.c
advanced_c/lookuptable/: main.c
advanced_c/unittest/: CMakeLists.txt  main.c
bit_op/: main.c
bitmap/: bitmap.c
cplusplus/: connection.cpp  main.c
dirent/: dir.c
enum/: main.c
errorhandling/: Makefile  main  main.c
fn_pointer/: main.c
headersandsource/: Makefile  main.c
io/: file.c  iov.c  main.c  mmap.c  scanf.c
lambda/: main.c  main.i
layout/: main.c
linkedlist/: Makefile  usestructures.c
linuxlist/: list.h  list.h.gch  main.c
memorymanagement/: malloc.c
mempool/: CMakeLists.txt  main.c
ncurse/: arraw.c  main.c
oop/: class.c  class.h  main.c  mystring.c  mystring.h  new.c  new.h  object.h  set.c  set.h
pointer/: array.c  basic.c  main.c  string.c
process/: main.c  signal.c
signals/: nonreentrant.c  signal.c
socketDemo/: client.c  echos.c
string/: comparingstring.c  main.c  numericconversion.c  swapupperlower.c
strtok/: strtok  strtok.c
time/: main.c
trl/: trl  trl.c
type/: main.c
unittest/: CMakeLists.txt  main.c
unittest/lib/: CMakeLists.txt  lib.c  lib.h
variables/: basic.c
(+77 files in other folders)
